auth_test_output.txt
  File "<string>", line 37
    print(f'  \u2705 Full flow PASSED: verified={verified}, name={result[\
          ^
SyntaxError: unterminated string literal (detected at line 37)
